Change links to html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,10 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a href="./index.md" class="btn">Start</a>
-      <a href="./help/help.md" class="btn">Help</a>
-      <a href="./privacy-policy/privacy-policy.md" class="btn">Privacy Policy</a>
-      <a href="./contact/contact.md" class="btn">Contact</a>
+      <a href="./index.html" class="btn">Start</a>
+      <a href="./help/help.html" class="btn">Help</a>
+      <a href="./privacy-policy/privacy-policy.html" class="btn">Privacy Policy</a>
+      <a href="./contact/contact.html" class="btn">Contact</a>
     </header>
 
     <main id="content" class="main-content" role="main">
