--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,14 +12,13 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-    <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       <a href="./index.html" class="btn">Start</a>
       <a href="./help/help.html" class="btn">Help</a>
-      <a href="./privacy-policy/privacy-policy.html" class="btn">Privacy Policy</a>
+      <a href="./privacy/policy.html" class="btn">Privacy Policy</a>
       <a href="./contact/contact.html" class="btn">Contact</a>
     </header>
 
