--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a href="/index.html" class="btn">Start</a>
+      <a href="/" class="btn">Start</a>
       <a href="/help/help.html" class="btn">Help</a>
       <a href="/privacy/policy.html" class="btn">Privacy Policy</a>
       <a href="/contact/contact.html" class="btn">Contact</a>
