Trying new magic, undocumented variable

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,11 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a href="{{ site.url }}" class="btn">Start</a>
-      <a href="{{ site.url }}/help/help.html" class="btn">Help</a>
-      <a href="{{ site.url }}/privacy/policy.html" class="btn">Privacy Policy</a>
-      <a href="{{ site.url }}/contact/contact.html" class="btn">Contact</a>
+      <a href="{{ site.baseurl }}" class="btn">Start</a>
+      <a href="https://dashboard.twitch.tv/extensions/mrhw94m9rpngocsodkrgacc2e1e246" class="btn">Install</a>
+      <a href="{{ site.baseurl }}/help/help.html" class="btn">Help</a>
+      <a href="{{ site.baseurl }}/privacy/policy.html" class="btn">Privacy Policy</a>
+      <a href="{{ site.baseurl }}/contact/contact.html" class="btn">Contact</a>
     </header>
 
     <main id="content" class="main-content" role="main">
