Add external link icon from FA instead

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
@@ -17,7 +18,7 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       <a href="{{ site.baseurl }}" class="btn">Start</a>
-      <a href="https://dashboard.twitch.tv/extensions/mrhw94m9rpngocsodkrgacc2e1e246" class="btn">Install<img src="{{ site.baseurl }}/icons/external-link.svg" style="vertical-align:text-bottom"></a>
+      <a href="https://dashboard.twitch.tv/extensions/mrhw94m9rpngocsodkrgacc2e1e246" class="btn">Install<i class="fas fa-external-link-alt" style="padding-left: 0.3rem;"></i></a>
       <a href="{{ site.baseurl }}/help/help.html" class="btn">Help</a>
       <a href="{{ site.baseurl }}/privacy/policy.html" class="btn">Privacy Policy</a>
       <a href="{{ site.baseurl }}/contact/contact.html" class="btn">Contact</a>
